# two_state_information_filter

./: CMakeLists.txt  README.md  package.xml
cfg/: vio_task.cfg
include/tsif/: element.h  element_vector.h  filter.h  filter_with_definition.h  model.h  residual.h  timeline.h  unit_vector.h  window.h
include/tsif/filters/: vio.h
include/tsif/residuals/: accelerometer_prediction.h  attitude_findif.h  attitude_update.h  bearing_findif.h  distance_findif.h  gyroscope_update.h  image_update.h  position_findif.h  position_update.h  random_walk.h
include/tsif/utils/: camera.h  timing.h  typedefs.h
src/: camera.cpp  test.cpp  test_imu_gps.cpp  test_quaternion.cpp  test_state.cpp  test_timeline.cpp  test_unit_vector.cpp  test_vio.cpp
