<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>two_state_information_filter</name>
  <version>0.4.23</version>
  <description>two-state information filter</description>
  <author email="bloeschm@ethz.ch">Michael Bloesch</author>
  <author>Michael Burri</author>
  <author>Thomas Schneider</author>
  <maintainer email="mwulf@anybotics.com">Maximilian Wulf</maintainer>
  <maintainer email="ynava@anybotics.com">Yoshua Nava</maintainer>
  <license>BSD</license>
  <url>github.com/ethz-asl/two_state_information_filter</url>
  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <depend>eigen</depend>
<!--   <test_depend condition="$ROS_VERSION == 1">cmake_code_coverage</test_depend> -->
  <test_depend condition="$ROS_VERSION == 1">gtest</test_depend>
  <test_depend condition="$ROS_VERSION == 2">ament_cmake_gtest</test_depend>
  <export>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
